# galendar

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  galendar.toml  pyproject.toml
.github/workflows/: lint.yml
src/dropbox-stubs/: __init__.pyi  files.pyi
src/galendar/: __init__.py  __main__.py  calendar.py  cli.py  console.py  log.py  tui.py
src/galendar/config/: __init__.py  galendar.toml  model.py  schema.py
src/galendar/formats/: __init__.py  gcal.py
src/galendar/sources/: __init__.py  cache.py  dropbox.py
