[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "galendar"
version         = "0.1.0"
description     = "Simple calendar backed by Dropbox"
readme          = "README.md"
authors         = [{ name = "Geir Arne Hjelle", email = "geirarne@gmail.com" }]
requires-python = ">=3.13"
dependencies    = ["dropbox>=12.0.2"]

[project.scripts]
galendar = "galendar.__main__:main"

[dependency-groups]
dev = [
    "ipython>=9.2.0",
]
