[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "galendar"
version         = "0.1.0"
description     = "Simple calendar backed by Dropbox"
readme          = "README.md"
authors         = [{ name = "Geir Arne Hjelle", email = "geirarne@gmail.com" }]
requires-python = ">=3.13"
dependencies    = [
    "configaroo>=0.2.0",
    "dropbox>=12.0.2",
    "loguru>=0.7.3",
    "parse>=1.20.2",
    "platformdirs>=4.3.8",
    "pyplugs>=0.5.2",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.scripts]
galendar = "galendar.__main__:main"

[dependency-groups]
dev = [
    "ipython>=9.2.0",
]
