[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "galendar"
version = "0.1.0"
description = "Simple calendar backed by Dropbox"
readme = "README.md"
authors = [{ name = "Geir Arne Hjelle", email = "geirarne@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "configaroo>=0.4.2",
    "dropbox>=12.0.2",
    "loguru>=0.7.3",
    "platformdirs>=4.3.8",
    "pyplugs>=0.5.4",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "textual>=5.3.0",
    "typer>=0.16.0",
]

[project.scripts]
galendar = "galendar.__main__:main"

[dependency-groups]
build = ["build>=1.3.0", "twine>=6.1.0"]
ci = ["mypy>=1.17.1", "pytest>=8.4.1", "ruff>=0.12.7", "types-requests>=2.32.3"]
dev = [
    { include-group = "ci" },
    { include-group = "test" },
    "bumpver>=2025.1131",
    "ipython>=9.2.0",
    "pre-commit>=4.2.0",
]
test = ["pytest>=8.4.1", "pytest-cov>=6.2.1"]

[tool.ruff]
target-version = "py313"
exclude = [".git"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Trailing comma missing (handled by formatter)
    "D203",   # Force blank line before class docstring (incompatible with D211)
    "D213",   # Start docstring on second line (incompatible with D212)
]

[tool.ruff.lint.per-file-ignores]
# D101: Missing docstring in public class (OK for Basemodels)
# FBT001: Boolean-typed positional argument in definition (OK for CLI)
# FBT003: Boolean-typed positional argument in call (OK for CLI)
# PLR2004: Magic value used in comparison (OK for tests)
# S101: Use of `assert` (OK for tests)
"src/galendar/cli.py" = ["FBT001", "FBT003"]
"src/galendar/config/schema.py" = ["D101"]
"tests/test_*.py" = ["PLR2004", "S101"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.bumpver]
current_version = "v0.1.0"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"']
